自己紹介です。

--- a/index.html
+++ b/index.html
@@ -10,57 +10,53 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- <header>
-        <div></div>
-        <div></div>
-    </header> -->
-    <section class="top-wrapper">
-        <h1>自己紹介</h1>
+    <header>
         <div class="name">
+        <img class="img" src="img/seedkun.png" alt="logo">
     </div>
+        <div class="name-right">Nobo blog</div>
+    </header>
+    <section class="top-wrapper">
+        <!-- <div class="name">
+    </div> -->
         <div class="profile">
             <p></p>
-            <ul>
-                <li>ずっと沖縄にいます。</li>
+            <ol>
+                <li>沖縄出身</li>
                 <li>少しベトナム語話せます。</li>
-                <li>基本的におおげさに話すので聞き流してください（笑）</li>
-                <li>寂しがりなので話しかけてれるとうれしくなります。</li>
-            </ul>
+                <li>間食多め</li>
+                <li>最近海外ドラマがおもしろい</li>
+            </ol>
             <img src="img/IMG-8612.JPG">
         </div>
     </section>
-    <section>
-        <div>
-                <div class="heading">
-                    <h2>趣味　Hobby</h2>
-                </div>
-            <ul class="hobby">
-                <li class="baseball">
-                    <video controls autoplay loop><source src="img/IMG_0471.mp4"></video>
-                    <p>Baseball</p>
-                </li>
-            </ul>
-        </div>
-    </section>
-    <div class="contact">
-        <div class="cantainer">
-            <div class="btn-contact">
-                <a href="#" class="btn-facebook">Facebook</a>
-                <a href="#" class="btn-twitter">twitter</a>
-
+    <section class="hobby">
+        <header-left>
+                <video controls autoplay loop><source src="img/IMG_0471.mp4"></video>
+        </header-left>
+        <header-right>
+            <div>
+                <a href="https://www.youtube.com/user/ooo0eve0ooo">HP</a>
             </div>
-
-        </div>
-
-    </div>
-    <section>
-        <!-- <p>見出し</p> -->
-        <form action="">
-            <input type="text">
-            <input type="text">
-            <input type="text">
-        </form>
+            <div>
+                <a href="https://www.youtube.com/watch?v=OskXF3s0UT8">おすすめ１</a>
+            </div>
+            <div>
+                <a href="https://www.youtube.com/watch?v=jJzw1h5CR-I">おすすめ２</a>
+            </div>
+            <div>
+                <a href="https://youtu.be/PvzBWFGEz8M">おすすめ３</a>
+            </div>
+        </header-right>
+        <main-left>
+                <a href="https://www.marv.jp/special/tokyoghoul/first/story_1st.html">link</a>
+        </main-left>
+        <main-right>
+                <a href="https://www.youtube.com/watch?v=oms6U3TpgGo">link</a>
+        </main-right>
     </section>
-    <footer></footer>
+    <footer>
+        <div class="name-right">Nobo blog</div>
+    </footer>
 </body>
 </html>
